Vérification d’un Vecteur d’Identification généré pour s’authentifier auprès d’un service web du SAE
svn path=/java/trunk/; revision=778